last changes in @media

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</div>
 	<div class="main-truck">
 		<div class="truck-img">
-			<img src="Pictures/truck.jpg">
+			<img src="Pictures/truck.png">
 		</div>
 		<div class="main_truck_text">
 			<h1>TRANSPORT</h1>
@@ -84,7 +84,7 @@
 	</div>
 	<div class="trucks-parking">
 		<div class="truck-parking">
-			<img src="Pictures/trucks.jpg">
+			<img src="Pictures/trucks4.jpg">
 		</div>
 		<div class="trucks-info">
 			<h2>Excepteur sint occaecat cupidatat non proident,<br>sunt in culpa qui officia</h2>
