--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
 	<title>Truckage</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<!-- header section -->
-		<div id="home" class="header-main">
-			<div class="caller">
-				<div class="call">
+	<div id="home" class="header-main">
+		<div class="caller">
+			<div class="call">
 				<a href="tel:+123111222333"><i class="fas fa-phone-square fa-2x" data-fa-transform="rotate-180"></i>&nbsp;&nbsp;+(123)111 222 333</a>
-				</div>
-			</div>
-			<div class="mail">
-				<a href="mailto:webmaster@example.com"><i class="fas fa-envelope-square fa-2x"></i>&nbsp;&nbsp;info@example.com</a> 
-			</div>
-			<div class="search">
-				<a href=""><i class="fas fa-search fa-lg"></i></a>
 			</div>
 		</div>
+		<div class="mail">
+			<a href="mailto:webmaster@example.com"><i class="fas fa-envelope-square fa-2x"></i>&nbsp;&nbsp;info@example.com</a> 
+		</div>
+		<div class="search">
+			<a href=""><i class="fas fa-search fa-lg"></i></a>
+		</div>
+	</div>
 	<!-- header section -->
 	<div class="nav">
 		<div class="logo">
@@ -42,93 +43,229 @@
 		<div class="main_truck_text">
 			<h1>TRANSPORT</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br><br>
-			Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua<br>
-			<br>Non proident sun.</p>
-			<a href=""><button>LEARN MORE</button></a>
-		</div>
-	</div>
-	<div class="main_info">
-		<div class="info">
-			<h2>Et harum quidem rerum facilis est et expedita</h2>
-			<p>Quis autem vel eum iure reprehenderit</p>
-			<span>At vero eos et accusamus et iusto odio dignissimos<br><br>
-			 ducimus qui blanditiis praesentium voluptatum deleniti atque <br><br>quos dolores et quas molestias excepturi sint occaecati<br><br>in culpa qui officia deserunt mollitia animi.</span><br><br>
-			 <button>READ MORE</button>
-		</div>
-		<div id="services" class="support">
-			<div class="up">
-				<div class="facility">
-					<img src="Pictures/truck_load.png">
-					<p>Heavy Transport Facility</p>
-					<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
-				</div>
-				<div class="service-support">
-					<img src="Pictures/customer.png">
-					<p>Service Support</p>
-					<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
-				</div>
-			</div>
-			<div class="down">
-				<div class="charges-fee">
-					<img src="Pictures/rocket.png">
-					<p>Transport Charges Free</p>
-					<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
-				</div>
-				<div class="delivery">
-					<img src="Pictures/time.png">
-					<p>Ontime Delivery</p>
-					<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
-				</div>
+				Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua<br>
+				<br>Non proident sun.</p>
+				<a href=""><button>LEARN MORE</button></a>
 			</div>
 		</div>
-	</div>
-	<div class="trucks-parking">
-		<div class="truck-parking">
-			<img src="Pictures/trucks4.jpg">
-		</div>
-		<div class="trucks-info">
-			<h2>Excepteur sint occaecat cupidatat non proident,<br>sunt in culpa qui officia</h2>
-			<p>Sed ut perspiciatis unde omnis iste natusnumquam eius modi tempora incidunt error sit<br> voluptatem ute irure dolor in reprehenderit  accusantium doloremque laudantium<br> eaque voluptate velit esse quam ipsa quae ab illo inventore veritatis <br>et quasi architecto beatae vitae dicta sunt explicabo.</p>
-			<button><a href="">More Details&nbsp;&nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></button>
-		</div>
-	</div>
-	<div class="footer-up">
-		<div id="about" class="about-us">
-			<h2>About Us</h2>
-			<span>Nor again is there anyone who loves<br> or pursues or desires to obtain veritatis <br>et quasi architecto beatae.</span><br><br>
-			<img src="Pictures/logo-footer.png">
-		</div>
-		<div class="links">
-			<h2>Links</h2>
-			<a href="#home"><p>Home</p></a>
-			<a href="#services"><p>Services</p></a>
-			<a href="#about"><p>About</p></a>
-			<a href="mailto:webmaster@example.com"><p>Mail Us</p></a>
-		</div>
-		<div class="twitter">
-			<h2>Twitter Posts</h2>
-			<span>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil<br> impedit quo minus.</span><br><br>
-			<i class="fab fa-twitter"> 02 days ago</i><br><br>
-			<span>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil<br>impedit quo minus.</span><br><br>
-			<i class="fab fa-twitter"> 02 days ago</i>
-		</div>
-		<div class="instagram">
-			<h2>Instagram</h2>
-			<img src="Pictures/trucks1.png">
-		</div>
-	</div>
-	<div class="footer">
-		<div class="footer-left">
-			<span>&copy; 2018 Trackage. All rights reserved | Design by <a href="https://www.omszone.com/"><span class="oms">OMS Zone</span></a></span>
-		</div>
-		<div class="footer-right">
-			<i class="fab fa-facebook-f fa-lg"></i>
-			<i class="fab fa-twitter fa-lg"></i>
-			<i class="fab fa-google-plus-g fa-lg"></i>
-			<i class="fab fa-instagram fa-lg"></i>
-			<i class="fab fa-pinterest-p fa-lg"></i>
+		<div class="main_info">
+			<div class="info">
+				<h2>Et harum quidem rerum facilis est et expedita</h2>
+				<p>Quis autem vel eum iure reprehenderit</p>
+				<span>At vero eos et accusamus et iusto odio dignissimos<br><br>
+					ducimus qui blanditiis praesentium voluptatum deleniti atque <br><br>quos dolores et quas molestias excepturi sint occaecati<br><br>in culpa qui officia deserunt mollitia animi.</span><br><br>
+					<button>READ MORE</button>
+				</div>
+				<div id="services" class="support">
+					<div class="up">
+						<div class="facility">
+							<img src="Pictures/truck_load.png">
+							<p>Heavy Transport Facility</p>
+							<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
+						</div>
+						<div class="service-support">
+							<img src="Pictures/customer.png">
+							<p>Service Support</p>
+							<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
+						</div>
+					</div>
+					<div class="down">
+						<div class="charges-fee">
+							<img src="Pictures/rocket.png">
+							<p>Transport Charges Free</p>
+							<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
+						</div>
+						<div class="delivery">
+							<img src="Pictures/time.png">
+							<p>Ontime Delivery</p>
+							<span>Lorem ipsum dolor sit<br>amet,consectereur adip.</span>
+						</div>
+					</div>
+				</div>
 			</div>
-	</div>
+			<div class="trucks-parking">
+				<div class="truck-parking">
+					<img src="Pictures/trucks4.jpg">
+				</div>
+				<div class="trucks-info">
+					<h2>Excepteur sint occaecat cupidatat non proident,<br>sunt in culpa qui officia</h2>
+					<p>Sed ut perspiciatis unde omnis iste natusnumquam eius modi tempora incidunt error sit<br> voluptatem ute irure dolor in reprehenderit  accusantium doloremque laudantium<br> eaque voluptate velit esse quam ipsa quae ab illo inventore veritatis <br>et quasi architecto beatae vitae dicta sunt explicabo.</p>
+					<button><a href="" class="linkovii">More Details&nbsp;&nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></button>
+				</div>
+			</div>
+			<br>
+			<br>
+			<!-- Cvetko HTML section -->
+				<div class="picture-flex">
+					<div class="flex">
+						<div class="trucks">
+							<img src="Pictures/truck1.jpg">
+						</div>
+						<div class="trucks">
+							<img src="Pictures/truck2.jpg">
+						</div>
+					</div>
+					<div class="flex">
+						<div class="train-aircraft">
+							<img src="Pictures/train.jpg">
+						</div>
+						<div class="train-aircraft">
+							<img src="Pictures/aircraft.jpg">
+						</div>
+					</div>
+					<div class="testimonials">
+						<span>TESTIMONIALS</span>
+					</div>
+					<div class="container">
+						<div class="row header-row">
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="carousel carousel-showmanymoveone slide" id="carousel123">
+									<div class="carousel-inner">
+										<div class="item active">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/1.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/2.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/3.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/4.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/1.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/2.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/3.png" class="img-responsive"></a></div>
+										</div>
+										<div class="item">
+											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/4.png" class="img-responsive"></a></div>
+										</div>
+									</div>
+									<a class="left carousel-control" href="#carousel123" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+									<a class="right carousel-control" href="#carousel123" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+								</div>
+							</div>
+						</div>
 
-</body>
-</html>
+
+					</div>
+				</div>
+				<div class="contact">
+					<div class="contact-info">
+						<h3>Contact info</h3>
+						<i class="fas fa-map-marker-alt"></i><p class="address">Address:4800 Jewell Road <br>Korea 09F 89MR</p>
+						<i class="fas fa-mobile-alt"></i><p class="telephone">+0955 670 204</p>
+						<i class="fas fa-envelope"></i><p class="mails">Example.com</p>
+					</div>
+
+					<div>
+						<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1063.0612942438615!2d22.109127502674003!3d44.057820117328994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4753f84c62ca43e9%3A0x2ce31d7a20d9a793!2sHarizma!5e0!3m2!1sen!2srs!4v1528093849347" width="455" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</div>
+					<div class="reservation">
+						<h1>Reservation</h1>
+						<form class="form">
+							<input type="text1" placeholder="Name" >
+							<input type="email" placeholder="Email">
+							<input type="number" placeholder="Telephone">
+							<input type="text" placeholder="Message...">
+							<input type="submit" placeholder="Send">
+						</form>
+					</div>
+
+				</div>
+	<!-- Cvetko HTML section -->
+				<div class="footer-up">
+					<div id="about" class="about-us">
+						<h2>About Us</h2>
+						<span>Nor again is there anyone who loves<br> or pursues or desires to obtain veritatis <br>et quasi architecto beatae.</span><br><br>
+						<img src="Pictures/logo-footer.png">
+					</div>
+					<div class="links">
+						<h2>Links</h2>
+						<a href="#home" class="linkovi"><p>Home</p></a>
+						<a href="#services" class="linkovi"><p>Services</p></a>
+						<a href="#about" class="linkovi"><p>About</p></a>
+						<a href="mailto:webmaster@example.com" class="linkovi"><p>Mail Us</p></a>
+					</div>
+					<div class="twitter">
+						<h2>Twitter Posts</h2>
+						<span>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil<br> impedit quo minus.</span><br><br>
+						<i class="fab fa-twitter"> 02 days ago</i><br><br>
+						<span>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil<br>impedit quo minus.</span><br><br>
+						<i class="fab fa-twitter"> 02 days ago</i>
+					</div>
+					<div class="instagram">
+						<h2>Instagram</h2>
+						<img src="Pictures/trucks1.png">
+					</div>
+				</div>
+				<div class="footer">
+					<div class="footer-left">
+						<span>&copy; 2018 Trackage. All rights reserved | Design by <a href="https://www.omszone.com/" class="linkovi"><span class="oms">OMS Zone</span></a></span>
+					</div>
+					<div class="footer-right">
+						<i class="fab fa-facebook-f fa-lg"></i>
+						<i class="fab fa-twitter fa-lg"></i>
+						<i class="fab fa-google-plus-g fa-lg"></i>
+						<i class="fab fa-instagram fa-lg"></i>
+						<i class="fab fa-pinterest-p fa-lg"></i>
+					</div>
+				</div>
+
+				<script>
+					function myMap() {
+						var mapOptions = {
+							center: new google.maps.LatLng(51.5, -0.12),
+							zoom: 10,
+							mapTypeId: google.maps.MapTypeId.HYBRID
+						}
+						var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+					}
+				</script>
+
+				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+				<script>
+					(function(){
+        // setup your carousels as you normally would using JS
+        // or via data attributes according to the documentation
+        // http://getbootstrap.com/javascript/#carousel
+        $('#carousel123').carousel({ interval: 2000 });
+        $('#carouselABC').carousel({ interval: 3600 });
+    }());
+
+					(function(){
+						$('.carousel-showmanymoveone .item').each(function(){
+							var itemToClone = $(this);
+
+							for (var i=1;i<4;i++) {
+								itemToClone = itemToClone.next();
+
+                // wrap around if at end of item collection
+                if (!itemToClone.length) {
+                	itemToClone = $(this).siblings(':first');
+                }
+
+                // grab item, clone, add marker class, add to collection
+                itemToClone.children(':first-child').clone()
+                .addClass("cloneditem-"+(i))
+                .appendTo($(this));
+            }
+        });
+					}());
+
+				</script>
+
+			</body>
+			</html>
