--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<i class="fas fa-envelope"></i><p class="mails">Example.com</p>
 					</div>
 
-					<div>
+					<div class="maps">
 						<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1063.0612942438615!2d22.109127502674003!3d44.057820117328994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4753f84c62ca43e9%3A0x2ce31d7a20d9a793!2sHarizma!5e0!3m2!1sen!2srs!4v1528093849347" width="455" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 					<div class="reservation">
@@ -211,11 +211,11 @@
 						<span>&copy; 2018 Trackage. All rights reserved | Design by <a href="https://www.omszone.com/" class="linkovi"><span class="oms">OMS Zone</span></a></span>
 					</div>
 					<div class="footer-right">
-						<i class="fab fa-facebook-f fa-lg"></i>
-						<i class="fab fa-twitter fa-lg"></i>
-						<i class="fab fa-google-plus-g fa-lg"></i>
-						<i class="fab fa-instagram fa-lg"></i>
-						<i class="fab fa-pinterest-p fa-lg"></i>
+						<a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-lg"></i></a>
+						<a href="https://twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
+						<a href="https://plus.google.com/discover"><i class="fab fa-google-plus-g fa-lg"></i></a>
+						<a href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
+						<a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p fa-lg"></i></a>
 					</div>
 				</div>
 
@@ -230,7 +230,9 @@
 					}
 				</script>
 
-				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap">
+					
+				</script>
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -263,9 +265,9 @@
                 .appendTo($(this));
             }
         });
-					}());
+	}());
 
-				</script>
+	</script>
 
 			</body>
 			</html>
