--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 	<title>Truckage</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Bitter" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<!-- header section -->
@@ -116,47 +117,126 @@
 					<div class="testimonials">
 						<span>TESTIMONIALS</span>
 					</div>
-					<div class="container">
-						<div class="row header-row">
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<div class="carousel carousel-showmanymoveone slide" id="carousel123">
-									<div class="carousel-inner">
-										<div class="item active">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/1.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/2.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/3.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/4.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/1.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/2.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/3.png" class="img-responsive"></a></div>
-										</div>
-										<div class="item">
-											<div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="Pictures/4.png" class="img-responsive"></a></div>
-										</div>
-									</div>
-									<a class="left carousel-control" href="#carousel123" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-									<a class="right carousel-control" href="#carousel123" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-								</div>
-							</div>
-						</div>
+<script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
+<script src="js/jssor.slider-27.1.0.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
 
+            var jssor_1_options = {
+              $AutoPlay: 1,
+              $AutoPlaySteps: 5,
+              $SlideDuration: 160,
+              $SlideWidth: 200,
+              $SlideSpacing: 3,
+              $ArrowNavigatorOptions: {
+                $Class: $JssorArrowNavigator$,
+                $Steps: 5
+              },
+              $BulletNavigatorOptions: {
+                $Class: $JssorBulletNavigator$
+              }
+            };
 
-					</div>
-				</div>
+            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+
+            /*#region responsive code begin*/
+
+            var MAX_WIDTH = 980;
+
+            function ScaleSlider() {
+                var containerElement = jssor_1_slider.$Elmt.parentNode;
+                var containerWidth = containerElement.clientWidth;
+
+                if (containerWidth) {
+
+                    var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+                    jssor_1_slider.$ScaleWidth(expectedWidth);
+                }
+                else {
+                    window.setTimeout(ScaleSlider, 30);
+                }
+            }
+
+            ScaleSlider();
+
+            $(window).bind("load", ScaleSlider);
+            $(window).bind("resize", ScaleSlider);
+            $(window).bind("orientationchange", ScaleSlider);
+            /*#endregion responsive code end*/
+        });
+    </script>
+    <style>
+        /*jssor slider loading skin spin css*/
+        .jssorl-009-spin img {
+            animation-name: jssorl-009-spin;
+            animation-duration: 1.4s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+
+        @keyframes jssorl-009-spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+
+        /*jssor slider bullet skin 057 css*/
+        .jssorb057 .i {position:absolute;cursor:pointer;}
+        .jssorb057 .i .b {fill:none;stroke:#fff;stroke-width:2000;stroke-miterlimit:10;stroke-opacity:0.4;}
+        .jssorb057 .i:hover .b {stroke-opacity:.7;}
+        .jssorb057 .iav .b {stroke-opacity: 1;}
+        .jssorb057 .i.idn {opacity:.3;}
+
+        /*jssor slider arrow skin 073 css*/
+        .jssora073 {display:block;position:absolute;cursor:pointer;}
+        .jssora073 .a {fill:#ddd;fill-opacity:.7;stroke:#000;stroke-width:160;stroke-miterlimit:10;stroke-opacity:.7;}
+        .jssora073:hover {opacity:.8;}
+        .jssora073.jssora073dn {opacity:.4;}
+        .jssora073.jssora073ds {opacity:.3;pointer-events:none;}
+    </style>
+    <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:660px;height:150px;overflow:hidden;visibility:hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:150px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
+            <img style="margin-top:-19px;position:relative;top:50%;width:20px;height:38px;" src="img/spin.svg" />
+        </div>
+        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:660px;height:150px;overflow:hidden;">
+            <div data-p="40.75">
+                <img data-u="image" src="img/1.png" />
+            </div>
+            <div data-p="40.75">
+                <img data-u="image" src="img/2.png" />
+            </div>
+            <div data-p="40.75">
+                <img data-u="image" src="img/3.png" />
+            </div>
+            <div data-p="40.75">
+                <img data-u="image" src="img/4.png" />
+            </div>
+                <div data-p="20.75">
+                <img data-u="image" src="img/1.png" />
+            </div>
+            <div data-p="40.75">
+                <img data-u="image" src="img/2.png" />
+            </div>
+            <div data-p="40.75">
+                <img data-u="image" src="img/3.png" />
+            </div>
+            <div data-p="40.75">
+                <img data-u="image" src="img/4.png" />
+            </div>
+        </div>
+        <!-- Arrow Navigator -->
+        <div data-u="arrowleft" class="jssora073" style="width:50px;height:50px;top:0px;" data-autocenter="2" data-scale="0.75" data-scale-left="0.75">
+            <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:60%;height:100%;">
+                <path class="a" d="M4037.7,8357.3l5891.8,5891.8c100.6,100.6,219.7,150.9,357.3,150.9s256.7-50.3,357.3-150.9 l1318.1-1318.1c100.6-100.6,150.9-219.7,150.9-357.3c0-137.6-50.3-256.7-150.9-357.3L7745.9,8000l4216.4-4216.4 c100.6-100.6,150.9-219.7,150.9-357.3c0-137.6-50.3-256.7-150.9-357.3l-1318.1-1318.1c-100.6-100.6-219.7-150.9-357.3-150.9 s-256.7,50.3-357.3,150.9L4037.7,7642.7c-100.6,100.6-150.9,219.7-150.9,357.3C3886.8,8137.6,3937.1,8256.7,4037.7,8357.3 L4037.7,8357.3z"></path>
+            </svg>
+        </div>
+        <div data-u="arrowright" class="jssora073" style="width:50px;height:50px;top:0px;right:0px;" data-autocenter="2" data-scale="0.75" data-scale-right="0.75">
+            <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:60%;height:100%;">
+                <path class="a" d="M11962.3,8357.3l-5891.8,5891.8c-100.6,100.6-219.7,150.9-357.3,150.9s-256.7-50.3-357.3-150.9 L4037.7,12931c-100.6-100.6-150.9-219.7-150.9-357.3c0-137.6,50.3-256.7,150.9-357.3L8254.1,8000L4037.7,3783.6 c-100.6-100.6-150.9-219.7-150.9-357.3c0-137.6,50.3-256.7,150.9-357.3l1318.1-1318.1c100.6-100.6,219.7-150.9,357.3-150.9 s256.7,50.3,357.3,150.9l5891.8,5891.8c100.6,100.6,150.9,219.7,150.9,357.3C12113.2,8137.6,12062.9,8256.7,11962.3,8357.3 L11962.3,8357.3z"></path>
+            </svg>
+        </div>
+    </div>
 				<div class="contact">
 					<div class="contact-info">
 						<h3>Contact info</h3>
@@ -218,56 +298,19 @@
 						<a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p fa-lg"></i></a>
 					</div>
 				</div>
+				
+<script>
+    function myMap() {
+        var mapOptions = {
+            center: new google.maps.LatLng(51.5, -0.12),
+            zoom: 10,
+            mapTypeId: google.maps.MapTypeId.HYBRID
+        }
+        var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+    }
+</script>
 
-				<script>
-					function myMap() {
-						var mapOptions = {
-							center: new google.maps.LatLng(51.5, -0.12),
-							zoom: 10,
-							mapTypeId: google.maps.MapTypeId.HYBRID
-						}
-						var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-					}
-				</script>
 
-				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap">
-					
-				</script>
-
-				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-				<script>
-					(function(){
-        // setup your carousels as you normally would using JS
-        // or via data attributes according to the documentation
-        // http://getbootstrap.com/javascript/#carousel
-        $('#carousel123').carousel({ interval: 2000 });
-        $('#carouselABC').carousel({ interval: 3600 });
-    }());
-
-					(function(){
-						$('.carousel-showmanymoveone .item').each(function(){
-							var itemToClone = $(this);
-
-							for (var i=1;i<4;i++) {
-								itemToClone = itemToClone.next();
-
-                // wrap around if at end of item collection
-                if (!itemToClone.length) {
-                	itemToClone = $(this).siblings(':first');
-                }
-
-                // grab item, clone, add marker class, add to collection
-                itemToClone.children(':first-child').clone()
-                .addClass("cloneditem-"+(i))
-                .appendTo($(this));
-            }
-        });
-	}());
-
-	</script>
-
-			</body>
-			</html>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+</body>
+</html>
