--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
         var map = new google.maps.Map(document.getElementById("map"), mapOptions);
     }
 </script>
+<!-- Smooth scrolling script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
@@ -344,6 +345,8 @@ body, html, .main {
 section {
     min-height: 100%;
 }
+</style>
+<!-- Smooth scrolling script -->
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
